--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^7.6.3",
     "react-scroll": "^1.9.3",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.5.3"
+    "react-vertical-timeline-component": "^3.5.3",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
