--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@react-three/drei": "^10.5.1",
-    "@react-three/fiber": "^9.2.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "8.13.6",
     "framer-motion": "^12.23.6",
     "maath": "^0.10.8",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.300",
     "react-router-dom": "^7.6.3",
@@ -27,8 +27,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^18.2.44",
+    "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
@@ -42,6 +42,6 @@
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
   "keywords": [],
-  "author": "",
+  "author": "Aya BEN MABROUK",
   "license": "ISC"
 }
